--- a/index.html
+++ b/index.html
@@ -27,24 +27,54 @@
                 <h3>Personal Information</h3>
 
                 <div class="form-group">
-                    <label for="nameField">Your Name</label>
+                    <label for="nameField">Full Name</label>
                     <input type="text" id="nameField" placeholder="Enter here" class="form-control" />
                 </div>
 
                 <div class="form-group mt-2">
-                    <label for="contactField">Your Contact</label>
-                    <input type="text" id="contactField" placeholder="Enter here" class="form-control" />
+                    <form id="myform">
+                        <div>
+                            <label for="contactField">Phone Number</label>
+                            <input type="tel" id="contactField" placeholder="Enter here" class="form-control" name="phone" />
+                            <div id="phoneError" class="error hidden">
+                                Please enter a valid phone number (including 10 numbers without letters)
+                            </div>
+                        </div>
+                        <div class="mt-2">
+                            <button type="submit">Submit</button>
+                        </div>
+                    </form>
                 </div>
 
                 <div class="form-group mt-2">
-                    <label for="addressField">Your Address</label>
-                    <textarea id="addressField" placeholder="Enter here" class="form-control" rows="5️"></textarea>
+                    <form id="myform2">
+                        <div>
+                            <label for="addressField">Email Address</label>
+                            <input type="text" id="addressField" placeholder="Enter here" class="form-control" name="email" />
+                            <div id="emailError" class="error hidden">
+                                Please enter a valid email address: Example@gmail.com
+                            </div>
+                        </div>
+                        <div class="mt-2">
+                            <button type="submit">Submit</button>
+                        </div>
+                    </form>
+                </div>
+
+                <div class="form-group mt-2">
+                    <label for="quoteField">Personal Favorite Quote</label>
+                    <input type="text" id="quoteField" placeholder="Enter here" class="form-control" />
+                </div>
+
+                <div class="form-group mt-2">
+                    <label for="avaField">Profile Picture</label>
+                    <input type="file" id="fileSelector" multiple />
                 </div>
 
                 <p class="text-secondary my-3">Important Links</p>
 
                 <div class="form-group mt-2">
-                    <label for="facebookField">Facebook Link</label>
+                    <label for="facebookField">Facebook</label>
                     <input type="text" id="facebookField" placeholder="Enter here" class="form-control" />
                 </div>
 
